fix to g-recaptcha alignment

--- a/wp-content/themes/wp-madison-child/static/less/style.less
+++ b/wp-content/themes/wp-madison-child/static/less/style.less
@@ -1232,6 +1232,10 @@ body.page-template-page-wide {
   z-index: 999;
   display: none;
 
+  .g-recaptcha {
+    text-align: center;
+  }
+
   .so-widget-rdc-get-touch-modal-base {
    bottom: 0;
    display: flex;
